--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "landingpage-react-template",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.0.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -10,6 +13,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.12.7",
     "smooth-scroll": "^16.1.3",
     "styled-components": "^6.1.12"
   },
