--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "emailjs-com": "^2.6.4",
+    "firebase": "^10.13.1",
     "nextjs": "^0.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
